tests/compile-fail/integration__integration__type_check__diffswitch__missing_first.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: unexpected token `:`
  ┌─ <input>:9:13
  │
9 │     int x = :4:4:6;
  │             ^ unexpected token
  │
  = 
    Expected one of "!", "$", "%", "(", "-", "REG", "_S", "_f", "anim", "case", "cos", "default", "ecli", "entry", "false", "mapfile", "offsetof", "script", "sin", "sqrt", "timeline", "timeof", "true", FLOAT, FLOAT_RAD, IDENT, INSTR, INT, INT_BIN, INT_HEX or STRING


